# circuit-tracer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yaml  publish.yml
circuit_tracer/: __init__.py  __main__.py  _version.py  analysis.py  graph.py
circuit_tracer/attribution/: __init__.py  attribute.py  attribute_nnsight.py  context_nnsight.py  context_transformerlens.py  targets.py
circuit_tracer/frontend/: __init__.py  graph_models.py  local_server.py
circuit_tracer/replacement_model/: common.py  replacement_model.py  replacement_model_nnsight.py  replacement_model_transformerlens.py
circuit_tracer/transcoder/: cross_layer_transcoder.py
circuit_tracer/utils/: __init__.py  caching.py  create_graph_files.py  demo_utils.py  disk_offload.py  hf_utils.py  tl_nnsight_mapping.py
docs/: api.md  architecture.md  backends.md  cli.md  roadmap.md
tests/: test_analysis.py  test_attribution_targets.py  test_attributions_gemma.py  test_attributions_gemma3_nnsight.py  test_attributions_gemma_nnsight.py  test_attributions_gpt_oss_nnsight.py  test_attributions_llama.py  test_attributions_llama_nnsight.py  test_freeze_points.py  test_freeze_points_hessian.py  test_graph.py  test_model_registry.py  test_offload.py  test_transformerlens_nnsight_same_gemma.py  test_transformerlens_nnsight_same_gemma_clts.py  test_transformerlens_nnsight_same_llama.py  test_transformerlens_nnsight_same_llama_clts.py  test_tutorial_notebook_backends.py
tests/utils/: test_caching.py  test_disk_offload.py  test_hf_utils.py
